src/serve/tests/requests/select/related/snapshots/basiliq__serve__tests__requests__select__related__include__include_rel_o2m.snap
---
source: src/serve/tests/requests/select/related/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__articles",
      "id": "fdf715dd-8772-498c-8196-6f4ccb64edef",
      "attributes": {
        "body": "Yes",
        "title": "How to dead"
      },
      "relationships": {
        "public__people-article": {
          "data": [
            {
              "type": "public__people-article",
              "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,fdf715dd-8772-498c-8196-6f4ccb64edef"
            },
            {
              "type": "public__people-article",
              "id": "777cc565-c66b-4942-ab44-8fc5f194b804,fdf715dd-8772-498c-8196-6f4ccb64edef"
            }
          ]
        }
      }
    },
    {
      "type": "public__articles",
      "id": "2dbf5d1a-b029-4456-af6b-339c75b1089c",
      "attributes": {
        "body": "Yeah I know ! Right ?!",
        "title": "Oh my g**"
      },
      "relationships": {
        "public__people-article": {
          "data": {
            "type": "public__people-article",
            "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,2dbf5d1a-b029-4456-af6b-339c75b1089c"
          }
        }
      }
    }
  ],
  "included": [
    {
      "type": "public__people-article",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,2dbf5d1a-b029-4456-af6b-339c75b1089c"
    },
    {
      "type": "public__people-article",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,fdf715dd-8772-498c-8196-6f4ccb64edef"
    },
    {
      "type": "public__people-article",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804,fdf715dd-8772-498c-8196-6f4ccb64edef"
    }
  ]
}
